--- a/EandBShipping/pom.xml
+++ b/EandBShipping/pom.xml
@@ -17,5 +17,10 @@
         <artifactId>mongodb-driver</artifactId>
         <version>3.4.3</version>
     </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.0.0</version>
+	</dependency>
 </dependencies>
 </project>
